# breakout

./: .clang-format  CMakeLists.txt
src/: Button.c  Collision.c  Collision.h  Consts.h  Input.h  Label.c  Label.h  Math.h  Palette.h  Player.h  Rectangle.c  Rectangle.h  State.c  State.h  UI.c  UI.h  Util.c  Util.h  main.c
src/Fonts/: Font.h  Square.c  Square.h
src/States/: GameState.c  GameState.h  MenuState.c  MenuState.h  State.c  State.h  States.h
src/UI/: Button.c  Button.h  Label.c  Label.h  UI.c  UI.h  VBoxContainer.c  VBoxContainer.h
src/states/: GameState.c  GameState.h  State.c  State.h
